# tui-db

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
screenshots/: README.md
src/: app.rs  config.rs  main.rs
src/db/: connection.rs  mod.rs  mysql.rs  sqlite.rs
src/ui/: connection_manager.rs  database_browser.rs  layout.rs  mod.rs  query_editor.rs  results_viewer.rs
src/vim/: mod.rs  mode.rs
